changes in footer

--- a/about.html
+++ b/about.html
@@ -38,46 +38,45 @@
     </div>
   </div>
 
-  <!-- Team -->
   <h2 class="text-center mb-4">Meet the Team</h2>
   <div class="row text-center">
-    <div class="col-md-4 mb-4">
-      <div class="card shadow-sm border-0">
+        <div class="col-md-4 mb-4">
+        <div class="card shadow-sm border-0">
         <img src="portrait/abhay.jpg" class="card-img-top">
         <div class="card-body">
           <h5 class="card-title">Abhay Lokare</h5>
           <p class="card-text text-muted">Wedding & Lifestyle Photographer</p>
         </div>
-      </div>
+          </div>
     </div>
     <div class="col-md-4 mb-4">
-      <div class="card shadow-sm border-0">
+         <div class="card shadow-sm border-0">
         <img src="portrait/abhay.jpg" class="card-img-top" >
         <div class="card-body">
           <h5 class="card-title">Abhay Lokare</h5>
           <p class="card-text text-muted">Fashion & Portrait Photographer</p>
         </div>
-      </div>
+           </div>
     </div>
     <div class="col-md-4 mb-4">
-      <div class="card shadow-sm border-0">
+        <div class="card shadow-sm border-0">
         <img src="portrait/abhay.jpg" class="team-img">
         <div class="card-body">
           <h5 class="card-title">Abhay Lokare</h5>
           <p class="card-text text-muted">Event & Travel Photographer</p>
-        </div>
+              </div>
       </div>
-    </div>
+      </div>
   </div>
 
-  <!-- Why Choose Us -->
-  <div class="mt-5">
-    <h2 class="text-center mb-3">Why Choose Us?</h2>
+  
+  <div class="why-text">
+    <h2 class="text-center ">Why Choose Us?</h2>
     <ul class="list-group">
-      <li class="list-group-item">Creative and professional photography team</li>
+         <li class="list-group-item">Creative and professional photography team</li>
       <li class="list-group-item">Experience in Weddings, Fashion, Product & Events</li>
-      <li class="list-group-item">High-quality editing and timely delivery</li>
-      <li class="list-group-item">Personalized approach to every photoshoot</li>
+        <li class="list-group-item">High-quality editing and timely delivery</li>
+        <li class="list-group-item">Personalized approach to every photoshoot</li>
     </ul>
   </div>
 </section>
