--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="collage-text-div">
-        <h2 class="collage-text">Some of our Dreamscapes</h2>
+        <h2 class="collage-text">Some of our Photographs</h2>
     </div>
     <div class="collage">
             <img class="collage-img" src="background-images/collage1.jpg">
